--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ body {
   display: flex;
   align-self: flex-start;
   gap: 50px;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .header__menu :first-child {
@@ -69,10 +72,17 @@ a:hover {
   border-radius: 3px;
   border: 1px solid #000;
   flex-shrink: 0;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .header__hamburger {
   display: none;
+  @media (max-width: 768px) {
+    display: block;
+    margin-right: 18px;
+  }
 }
 
 /* HERO */
@@ -90,6 +100,9 @@ a:hover {
   text-align: center;
   font-family: "Fira Sans";
   font-size: 53px;
+  @media (max-width: 768px) {
+    font-size: 36px;
+  }
 }
 
 .hero__text {
@@ -101,6 +114,9 @@ a:hover {
   font-weight: 400;
   line-height: 150%;
   padding-bottom: 50px;
+  @media (max-width: 768px) {
+    width: 400px;
+  }
 }
 
 .hero__buttons {
@@ -120,6 +136,11 @@ a:hover {
   animation-name: slide;
   animation-duration: 2s;
   animation-iteration-count: 1;
+  @media (max-width: 768px) {
+    width: 255.226px;
+    height: 255.968px;
+    flex-shrink: 0;
+  }
 }
 
 /* CARDS */
@@ -133,6 +154,18 @@ a:hover {
   row-gap: 64px;
   column-gap: 30px;
   margin: 100px auto auto;
+  @media (max-width: 768px) {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    justify-items: stretch;
+    row-gap: 16px;
+    column-gap: 16px;
+    margin: 20px auto 20px;
+    width: 90%;
+  }
 }
 
 .cards__header {
@@ -143,6 +176,12 @@ a:hover {
   font-weight: bold;
   justify-self: center;
   grid-column: span 4;
+  @media (max-width: 768px) {
+    grid-column: span 2;
+    height: 50px;
+    font-size: 36px;
+    margin: 20px auto 20px;
+  }
 }
 .cards__small {
   display: grid;
@@ -155,6 +194,10 @@ a:hover {
   height: 400px;
   border-radius: 3px;
   background-color: #ebebeb;
+  @media (max-width: 768px) {
+    height: 240px;
+    width: 160px;
+  }
 }
 
 .cards__small--img {
@@ -162,6 +205,12 @@ a:hover {
   width: 96px;
   height: auto;
   padding-top: 30px;
+  @media (max-width: 768px) {
+    width: 60px;
+    padding: 0px;
+    align-self: center;
+    justify-self: center;
+  }
 }
 
 .cards__small--header {
@@ -190,7 +239,22 @@ a:hover {
   width: auto;
   height: 350px;
   grid-column: span 2;
+  @media (max-width: 768px) {
+    height: 216px;
+  }
 }
+
+.cards__large--first {
+  @media (max-width: 768px) {
+    margin-top: 20px;
+  }
+}
+
+/* .cards__large--last {
+  @media (max-width: 768px) {
+    margin-bottom: 150px;
+  }
+} */
 
 .cards__large--header {
   align-self: end;
@@ -231,6 +295,11 @@ a:hover {
   justify-content: end;
   align-items: center;
   height: 550px;
+  @media (max-width: 768px) {
+    display: flex;
+    align-items: center;
+    margin-top: 150px;
+  }
 }
 
 .footer__box {
@@ -243,6 +312,11 @@ a:hover {
   margin: 70px 200px 70px 0px;
   border-radius: 3px;
   background: #fff;
+  @media (max-width: 768px) {
+    width: 343px;
+    height: 420px;
+    margin: auto;
+  }
 }
 
 .footer__box--header {
@@ -250,6 +324,9 @@ a:hover {
   font-family: "Fira sans";
   font-size: 53px;
   margin: 0px 0px 20px 30px;
+  @media (max-width: 768px) {
+    font-size: 36px;
+  }
 }
 
 .footer__box--textlarge {
@@ -257,6 +334,9 @@ a:hover {
   font-family: "Fira sans";
   font-size: 22px;
   margin: 0px 0px 10px 30px;
+  @media (max-width: 768px) {
+    font-size: 18px;
+  }
 }
 
 .footer__box--text {
@@ -265,6 +345,9 @@ a:hover {
   font-size: 14px;
   line-height: 150%;
   margin: 0px 0px 50px 30px;
+  @media (max-width: 768px) {
+    width: 75%;
+  }
 }
 
 .footer__box--contact {
@@ -291,89 +374,6 @@ a:hover {
   background-color: #fff;
   flex-shrink: 0;
   margin: 0px 0px 10px 30px;
-}
-
-@media (max-width: 768px) {
-  .header__img {
-    margin-left: 18px;
-  }
-
-  .header__menu {
-    display: none;
-  }
-
-  .header__button {
-    display: none;
-  }
-
-  .header__hamburger {
-    display: block;
-    margin-right: 18px;
-  }
-
-  .hero__header {
-    font-size: 36px;
-  }
-
-  .hero__text {
-    width: 400px;
-  }
-
-  .hero__img {
-    width: 255.226px;
-    height: 255.968px;
-    flex-shrink: 0;
-  }
-  .cards__ {
-    text-align: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr 1fr 1fr;
-    justify-content: center;
-    justify-items: stretch;
-    row-gap: 16px;
-    column-gap: 16px;
-    margin: 20px auto 20px;
-    width: 90%;
-  }
-
-  .cards__header {
-    grid-column: span 2;
-    height: 50px;
-    font-size: 36px;
-    margin: 20px auto 20px;
-  }
-
-  .cards__large {
-    height: auto;
-  }
-
-  .cards__large--media {
-    margin-top: 20px;
-  }
-
-  .footer__ {
-    display: flex;
-    align-items: center;
-  }
-
-  .footer__box {
-    width: 430px;
-    height: 420px;
-    margin: auto;
-  }
-
-  .footer__box--header {
-    font-size: 36px;
-  }
-
-  .footer__box--textlarge {
-    font-size: 18px;
-  }
-
-  .footer__box--text {
-    width: 75%;
-  }
 }
 
 @keyframes slide {
