removed contactbutton in MQ

--- a/style.css
+++ b/style.css
@@ -372,6 +372,9 @@ a:hover {
   background-color: #fff;
   flex-shrink: 0;
   margin: 0px 0px 10px 30px;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 @keyframes slide {
