--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ a:hover {
   text-align: center;
   font-family: "Fira Sans";
   font-size: 53px;
+  animation: pulsing-header;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
   @media (max-width: 768px) {
     font-size: 36px;
   }
@@ -374,6 +377,18 @@ a:hover {
   margin: 0px 0px 10px 30px;
   @media (max-width: 768px) {
     display: none;
+  }
+}
+
+@keyframes pulsing-header {
+  0% {
+    font-size: 53px;
+  }
+  50% {
+    font-size: 73px;
+  }
+  0% {
+    font-size: 53px;
   }
 }
 
