--- a/style.css
+++ b/style.css
@@ -291,11 +291,12 @@ a:hover {
 
 .footer__ {
   background-image: url(Footer-background.png);
-  background-size: auto;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: end;
   align-items: center;
   height: 550px;
+  background-size: cover;
   @media (max-width: 768px) {
     display: flex;
     align-items: center;
@@ -310,7 +311,7 @@ a:hover {
   align-items: start;
   height: 430px;
   width: 450px;
-  margin: 70px 200px 70px 0px;
+  margin: 70px 220px 70px 0px;
   border-radius: 3px;
   background: #fff;
   @media (max-width: 768px) {
