--- a/style.css
+++ b/style.css
@@ -6,59 +6,51 @@
 body {
   color: #444;
   font-family: "Fira sans", sans-serif;
-  position: relative;
-  width: auto;
-  margin: 0 auto;
 }
 
 /* HEADER */
 
-.header__ {
+.header {
   display: flex;
   justify-content: space-between;
   background-color: #eee;
-  padding: 20px 40px;
-  height: 80px;
+  padding: 20px 40px 80px;
 }
 
-.header__img {
-  height: 24px;
-  width: 95px;
+.header__logo {
   flex-shrink: 0;
 }
 
 .header__menu {
   display: flex;
-  align-self: flex-start;
   gap: 50px;
-  @media (max-width: 768px) {
-    display: none;
-  }
 }
 
 .header__menu :first-child {
   color: #222;
 }
 
-.header__menu__item {
+.header__menu--item {
   color: #999;
   font-family: "Fira Sans";
   font-size: 12px;
   letter-spacing: 0.204px;
+  text-decoration: none;
+  /* & :hover {
+    color: #c0c0c0;
+  } */
 }
 
 a:link {
   color: #999;
-  text-decoration: none;
 }
 
 a:visited {
   color: #999;
 }
 
-a:hover {
-  color: #c0c0c0;
-  font-weight: bold;
+a:active {
+  color: #000;
 }
 
 .header__button {
@@ -71,156 +63,94 @@ a:hover {
   letter-spacing: 0.204px;
   border-radius: 3px;
   border: 1px solid #000;
-  flex-shrink: 0;
-  @media (max-width: 768px) {
-    display: none;
-  }
 }
 
-.header__hamburger {
+.header__hamburger--hidden {
   display: none;
-  @media (max-width: 768px) {
-    display: block;
-    margin-right: 18px;
-  }
 }
 
 /* HERO */
 
-.hero__ {
+.hero {
   background-color: #eee;
-  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.hero__header {
+.hero__heading {
   color: #222;
-  text-align: center;
-  font-family: "Fira Sans";
   font-size: 53px;
   animation: pulsing-header;
   animation-duration: 3s;
   animation-iteration-count: 1;
-  @media (max-width: 768px) {
-    font-size: 36px;
-  }
 }
 
 .hero__text {
   width: 550px;
   color: #222;
   text-align: center;
-  font-family: "Fira Sans";
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
-  padding-bottom: 50px;
-  @media (max-width: 768px) {
-    width: 340px;
-  }
+  margin-bottom: 50px;
 }
 
 .hero__buttons {
   display: flex;
-  justify-self: center;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
   gap: 50px;
   position: relative;
   animation-name: slide-buttons;
   animation-duration: 2s;
   animation-iteration-count: 1;
-  @media (max-width: 768px) {
-    animation: none;
-  }
 }
 
 .hero__img {
-  justify-self: center;
   position: relative;
   animation-name: slide;
   animation-duration: 2s;
   animation-iteration-count: 1;
-  @media (max-width: 768px) {
-    width: 255.226px;
-    height: 255.968px;
-    flex-shrink: 0;
-    animation: none;
-  }
 }
 
 /* CARDS */
-.cards__ {
+.cards {
   width: 70%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto 1fr 1fr;
-  justify-content: center;
-  justify-items: stretch;
   row-gap: 64px;
   column-gap: 30px;
   margin: 100px auto auto;
-  @media (max-width: 768px) {
-    text-align: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr 1fr 1fr;
-    justify-content: center;
-    justify-items: stretch;
-    row-gap: 16px;
-    column-gap: 16px;
-    margin: 20px auto 20px;
-    width: 90%;
-  }
 }
 
-.cards__header {
-  height: 100px;
+.cards__heading {
   color: #222;
-  font-family: "Fira Sans";
   font-size: 53px;
   font-weight: bold;
   justify-self: center;
   grid-column: span 4;
-  @media (max-width: 768px) {
-    grid-column: span 2;
-    height: 50px;
-    font-size: 36px;
-    margin: 20px auto 20px;
-  }
+  margin-bottom: 45px;
 }
-.cards__small {
+.smallcard {
   display: grid;
   grid-template-rows: 5fr 1fr 1fr;
   row-gap: 10px;
   justify-content: center;
-  align-content: center;
   text-align: center;
   width: auto;
   height: 400px;
   border-radius: 3px;
   background-color: #ebebeb;
-  @media (max-width: 768px) {
-    height: 240px;
-    width: 160px;
-  }
 }
 
-.cards__small--img {
+.smallcard__img {
   align-self: center;
   width: 96px;
   height: auto;
-  padding-top: 30px;
-  @media (max-width: 768px) {
-    width: 60px;
-    padding: 0px;
-    align-self: center;
-    justify-self: center;
-  }
 }
 
-.cards__small--header {
+.smallcard__title {
   color: #222;
   align-self: end;
   font-family: "Fira Sans";
@@ -228,7 +158,7 @@ a:hover {
   font-weight: bold;
 }
 
-.cards__small--text {
+.smallcard__text {
   color: #000;
   align-self: start;
   font-family: "Fira Sans";
@@ -236,7 +166,7 @@ a:hover {
   font-weight: 400;
 }
 
-.cards__large {
+.largecard {
   display: grid;
   grid-template-rows: 4fr 1fr 3fr;
   justify-content: center;
@@ -246,18 +176,9 @@ a:hover {
   width: auto;
   height: 350px;
   grid-column: span 2;
-  @media (max-width: 768px) {
-    height: 216px;
-  }
 }
 
-.cards__large--first {
-  @media (max-width: 768px) {
-    margin-top: 20px;
-  }
-}
-
-.cards__large--header {
+.largecard__title {
   align-self: end;
   color: #fff;
   font-family: "Fira Sans";
@@ -267,7 +188,7 @@ a:hover {
   line-height: normal;
 }
 
-.cards__large--text {
+.largecard__text {
   justify-self: center;
   align-self: start;
   font-family: "Fira Sans";
@@ -276,7 +197,7 @@ a:hover {
   font-weight: 400;
 }
 
-.cards__large--button {
+.largecard__button {
   justify-self: center;
   align-self: start;
   background-color: #343332;
@@ -289,7 +210,7 @@ a:hover {
 
 /* FOOTER */
 
-.footer__ {
+.footer {
   background-image: url(Footer-background.png);
   background-repeat: no-repeat;
   display: flex;
@@ -297,14 +218,9 @@ a:hover {
   align-items: center;
   height: 550px;
   background-size: cover;
-  @media (max-width: 768px) {
-    display: flex;
-    align-items: center;
-    margin-top: 150px;
-  }
 }
 
-.footer__box {
+.footerbox {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -314,45 +230,31 @@ a:hover {
   margin: 70px 220px 70px 0px;
   border-radius: 3px;
   background: #fff;
-  @media (max-width: 768px) {
-    width: 343px;
-    height: 420px;
-    margin: auto;
-  }
 }
 
-.footer__box--header {
+.footerbox__heading {
   color: #222;
   font-family: "Fira sans";
   font-size: 53px;
   margin: 0px 0px 20px 30px;
-  @media (max-width: 768px) {
-    font-size: 36px;
-  }
 }
 
-.footer__box--textlarge {
+.footerbox__title {
   color: #222;
   font-family: "Fira sans";
   font-size: 22px;
   margin: 0px 0px 10px 30px;
-  @media (max-width: 768px) {
-    font-size: 18px;
-  }
 }
 
-.footer__box--text {
+.footerbox__text {
   color: #222;
   font-family: "Fira sans";
   font-size: 14px;
   line-height: 150%;
   margin: 0px 0px 50px 30px;
-  @media (max-width: 768px) {
-    width: 75%;
-  }
 }
 
-.footer__box--contact {
+.footerbox__contacts {
   display: flex;
   gap: 10px;
   list-style: none;
@@ -363,7 +265,7 @@ a:hover {
   line-height: 150%;
 }
 
-.footer__box--button {
+.footerbox__button {
   width: 146px;
   height: 40px;
   color: #222;
@@ -376,14 +278,115 @@ a:hover {
   background-color: #fff;
   flex-shrink: 0;
   margin: 0px 0px 10px 30px;
-  @media (max-width: 768px) {
-    display: none;
-  }
+
   /* @media (prefers-reduced-motion: no-preference) {
     animation: pulsing-contactbutton;
     animation-duration: 3s;
     animation-iteration-count: infinite;
   } */
+}
+
+@media (max-width: 768px) {
+  .header__menu--hidden {
+    display: none;
+  }
+
+  .header__button--hidden {
+    display: none;
+  }
+
+  .header__hamburger {
+    display: block;
+    margin-right: 18px;
+  }
+
+  .hero__heading--small-no-animation {
+    font-size: 36px;
+    animation: none;
+  }
+
+  .hero__text--small {
+    width: 340px;
+  }
+
+  .hero__buttons--no-animation {
+    animation: none;
+  }
+
+  .hero__img--small-no-animation {
+    width: 255.226px;
+    height: 255.968px;
+    flex-shrink: 0;
+    animation: none;
+  }
+
+  .cards--compressed {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    justify-items: stretch;
+    row-gap: 16px;
+    column-gap: 16px;
+    margin: 20px auto 20px;
+    width: 90%;
+  }
+
+  .cards__heading--small {
+    grid-column: span 2;
+    height: 50px;
+    font-size: 36px;
+    margin: 20px auto 20px;
+  }
+
+  .smallcard--small {
+    height: 240px;
+    width: 160px;
+  }
+
+  .smallcard__img--small {
+    width: 60px;
+    padding: 0px;
+    align-self: center;
+    justify-self: center;
+  }
+
+  .largecard--small {
+    height: 216px;
+  }
+
+  .largecard--margintop {
+    height: 216px;
+  }
+
+  .footer--small {
+    display: flex;
+    align-items: center;
+    margin-top: 150px;
+  }
+
+  .footerbox--small {
+    width: 343px;
+    height: 420px;
+    margin: auto;
+  }
+
+  .footerbox__heading--small {
+    font-size: 36px;
+  }
+
+  .footerbox__title--small {
+    font-size: 18px;
+  }
+
+  .footerbox__text--small {
+    width: 75%;
+  }
+
+  .footerbox__button--hidden {
+    display: none;
+  }
 }
 
 @keyframes pulsing-header {
